feat(auth): 基于领域驱动设计思想和CQRS架构完善用户与认证相关的领域以及外围服务
- 基于领域驱动设计思想和CQRS架构完善用户与认证相关的领域以及外围接口
- 修正 JWT username Claim 为字符串类型，统一 Username 校验规则
- 统一密码加密为 BCrypt ，修复 User.verifyPassword 使用字符串比较的问题
- 收敛身份校验至 UserAuthenticationSpecification ，提升领域一致性
- 新增/完善测试

BREAKING CHANGE:

- 加密策略切换为 BCrypt ，老数据需迁移；建议采用双写过渡或批量重置密码
- 统一时间类型为 Instant 的改动可能影响部分JPA查询与审计字段映射
Tests:

- 新增测试覆盖核心认证与仓库路径；集成测试用例已补充并运行验证核心流程稳定性
Scopes:

- auth-domain 、 auth-infrastructure 、 auth-application 、测试代码与分析文件